_sass/_base.scss
/* ... */
nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

nav li {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: 'Open Sans', sans-serif;
  line-height: 45px;
  padding: 0 25px;
  height: 60px;

  @media screen and (max-width: 768px) {
    padding: 0 10px;
    height: 50px;
  }

  @media screen and (max-width: 374px) {
    padding: 0 5px;
    height: 50px;
  }
}

nav a {
  color: #fff;
  opacity: 0.9;
  letter-spacing: 2px;
  font-size: 11px;
  text-decoration: none;
  text-transform: uppercase;
  transition: opacity .3s ease-out;

  @media screen and (max-width: 374px) {
    font-size: 10px;
  }
}

nav a:hover {
  opacity: 1;
}

nav.fixed {
  position: fixed;
  top: 0;
  background-color: rgba(0, 0, 0, 0.2);
}

.nav__home {
  @media screen and (max-width: 768px) {
    display: none;
  }
}

.nav__home a.current,
.nav__about a.current,
.nav__services a.current,
.nav__skills a.current,
.nav__portfolio a.current {
  font-weight: bold;
}

.nav__home a.current {
  color: #fff;
}
.nav__about a.current {
  color: #f69027;
}
.nav__services a.current {
  color: #0c539c;
}
.nav__skills a.current {
  color: #569687;
}
.nav__portfolio a.current {
  color: #fab003;
}

#return-home {
  margin-left: 25px;

  @media screen and (max-width: 768px) {
    margin-left: 5px;
  }
}

.logo-nav {
  height: 20px;
}

#duContenu {
  height: auto;
  width: 100%;
  background-color: #090d33;
  background-size: cover;
  padding: 100px 0;
}

#duContenu h1 {
  font-family: "Roboto Slab";
  font-weight: 400;
  text-align: justify;
  width: 75%;
  margin: 70px auto;
  color: white;
  text-align: center;
}

#part-2 #duContenu {
  background-color: #524C6E;
}

i.fa.fa-angle-down {
  color: white;
  position: absolute;
  margin: auto;
  bottom: 40px;
  left: 0; right: 0;
  width: 50px;
  height: 40px;
  font-size: 80px;
  line-height: 40px;
  transition: opacity .4s ease-out;
  opacity: .8;
  animation: bounce 4s infinite;
}

i.fa.fa-angle-down:hover {
  opacity: 1;
}

@-webkit-keyframes bounce {
	0%, 20%, 60%, 100%  { -webkit-transform: translateY(0); }
  40%  { -webkit-transform: translateY(-20px); }
	80% { -webkit-transform: translateY(-10px); }
}

.logo {
  height: 15%;
  filter: drop-shadow(5px 5px 5px black);
  width: auto;
  margin-bottom: 40px;
}

.intro-name {
  font-family: 'Dosis', arial, sans-serif;
  text-transform: uppercase;
  font-size: 30px;
  letter-spacing: 50px;
  color: #fff;
  opacity: .9;
  margin-bottom: 50px;
  // text-shadow: rgba(0, 0, 0, 0.44) 1px 1px 3px;

  @media screen and (max-width: 768px) {
    font-size: 15px;
    letter-spacing: 15px;
    margin-bottom: 30px;
  }
}

.intro-text {
  font-family: 'Open Sans', sans-serif;
  color: white;
  font-weight: 100;
  font-size: 18px;
  line-height: 1.2;
  opacity: .7;
  letter-spacing: 2px;
  margin-bottom: 5%;

  @media screen and (max-width: 768px) {
    font-size: 12px;
  }
}

.social-icons {
  display: flex;
  position: absolute;
  bottom: 15%;
}

.social-icons__icon {
  border: 2px solid #fff;
  border-radius: 100%;
  box-shadow: 0 0 20px rgba(255, 255, 255, 0) inset;
  color: #fff;
  display: inline-block;
  font-size: 16px;
  height: 50px;
  line-height: 45px;
  text-shadow: none;
  transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1) 0s;
  width: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: none;
  margin: 5px;
  opacity: .7;

  &:hover {
    opacity: 1;
  }
}

#about {
  display: flex;
  justify-content: center;
  width: 100%;
  background-color: rgba(255, 255, 255, .8);
  background: url('../img/graphic-pattern-sepia.jpg') repeat;
  background-size: 270px;
  border-top: 4px double #f69027;

  &:before {
    content: "\f0f4";
    font-family: "FontAwesome";
    height: 80px;
    width: 80px;
    background-color: white;
    border-bottom-right-radius: 50%;
    border-bottom-left-radius: 50%;
    position: absolute;
    top: -4px;
    border: 4px double #f69027;
    color: #f69027;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 40px;
  }

  .fa-angle-down {
    color: #f69027;
  }
}

.about__wrapper {
  align-items: center;
  display: flex;
  width: 70%;
  margin: auto;

  @media screen and (max-width: 768px) {
    flex-direction: column;
    width: 90%;
  }
}

.about__photo {
  width: 255px;
  height: 255px;
  border: 4px solid #f69027;
  border-radius: 50%;
  margin-right: 50px;

  @media screen and (max-width: 768px) {
    margin-right: 0;
    width: 120px;
    height: 120px;
  }
}

.about__presentation-container {
  display: flex;
  flex-direction: column;
}

.about__title {
  strong {
    color: #f69027;
  }

  @media screen and (max-width: 768px) {
    font-size: 20px;
    text-align: center;
  }
}

.about__presentation {
  @media screen and (max-width: 768px) {
    font-size: 14px;
    text-align: justify;
  }
}

#services {
  display: flex;
  justify-content: center;
  border-top: 4px double #0c539c;

  &:before {
    content: "\f1b3";
    font-family: "FontAwesome";
    height: 80px;
    width: 80px;
    background-color: white;
    border-bottom-right-radius: 50%;
    border-bottom-left-radius: 50%;
    position: absolute;
    top: -4px;
    border: 4px double #0c539c;
    color: #0c539c;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 40px;
  }

  .fa-angle-down {
    color: #0c539c;
  }
}

.services__wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 70%;
  margin: auto;

  @media screen and (max-width: 768px) {
    width: 95%;
  }
}

.services__row {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  width: 100%;
}

.services__item {
  margin: 30px 50px;
  display: flex;
  align-items: center;
  flex-direction: column;
  flex: 1;

  @media screen and (max-width: 768px) {
    margin: 10px 5px;
  }
}
/* ... */

